--- a/ToDoList.css
+++ b/ToDoList.css
@@ -1,31 +1,16 @@
 /* ToDoList.css */
-
 body {
     text-align: center;
     margin: 0;
-}
-
-#task {
-    padding: 8px;
-    margin-bottom: 10px;
-}
-
-#btn1 {
-    padding: 8px;
 }
 
 table {
     width: 80%;
     border: "0";
     border-collapse: collapse;
-    margin-left:auto;
-    margin-right:auto;
+    margin-left: auto;
+    margin-right: auto;
     background-color: floralwhite;
-}
-
-.day {
-    width: 150px;
-    background-color: lightcyan;
 }
 
 .content {
@@ -33,12 +18,27 @@ table {
     background-color: lightskyblue;
 }
 
+.day {
+    width: 150px;
+    background-color: lightcyan;
+}
+
 .task-content {
     display: flex;
     align-items: center;
-    padding: 8px;
+    height: 10px;
+    padding: 0 8px;
 }
 
 .task-content button {
-    margin-left: auto; 
+    margin-left: auto;
+}
+
+#btn1 {
+    padding: 8px;
+}
+
+#task {
+    padding: 8px;
+    margin-bottom: 10px;
 }
